# roper

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README  README.md  aliases.rc  arminst  asmtools.asd  cloc.txt  env.rc  foo  launch.sh  notes.txt  package.lisp  roper.cabal  serve  snek-launch.sh  stack.yaml  tags
.cargo/: config
app/: Main.hs
bins/: h  ldconfig-gadget.dumps
bins/armgads/: gad-0  gad-1  gad-10  gad-100  gad-101  gad-102  gad-103  gad-104  gad-105  gad-106  gad-107  gad-108  gad-109  gad-10A  gad-10B  gad-10C  gad-10D  gad-10E  gad-10F  gad-11  gad-110  gad-111  gad-112  gad-113  gad-114  gad-115  gad-116  gad-117  gad-118  gad-119  gad-11A  gad-11B  gad-11C  gad-11D  gad-11F  gad-12  gad-120  gad-121  gad-122  gad-123  (+811 more)
c/: #hatchery.c#  .#emhatchery.c  .#hatchery.c  .#hatchery.h  .#hatchsock.c  .gdb_history  Makefile  TODO  a.out  dump.sh  emhatchery.c  example.arm.elf  example.arm.s  example.elf  example.h  example.s  foo.c  hatchery.c  hatchery.h  hatchsock.c  hatchsock.c.bak  includes.h  listener.c  main.c  serve
data/: .gdb_history  ldconfig.real_heatmap.sexp  ldconfig.rodata  ldconfig.text  openssl  openssl.arm.rop  openssl.thumb.rop  openssl_heatmap.sexp  rg_ldconfig.real_out  tomato-RT-AC3200-ARM-132-AIO-httpd  tomato-RT-N18U-httpd  tomato-RT-N18U-httpd_heatmap.sexp
doc/: ARM32.tex  Diagram1.dia  Thumb16.tex  atlseccon.txt  examples  old-gadgets.lhs
doc/NOTES/: braiding  interesting.txt  ldconfig.profile  openssl  puns  reg-profile.plot  sampling  tomato-RT-N18U-httpd.profile
doc/SecDef/: comment.cut  roper_gecco.fdb_latexmk  roper_gecco.tex  roper_gecco_sigconf.aux  roper_gecco_sigconf.bbl  roper_gecco_sigconf.blg  roper_gecco_sigconf.dvi  roper_gecco_sigconf.fdb_latexmk  roper_gecco_sigconf.fls  roper_gecco_sigconf.out  roper_gecco_sigconf.tex  roper_gecco_sigconf.xdv  sigproc.bib  slides  summary.fdb_latexmk  summary.fls
doc/diagrams/: compiler.dia  compiler.dia~  ga.dia  progress.dia  simplified.dia  simplified.dia~
doc/imgs/: 200px-D&DRoper.xcf  mario-jump.xcf
doc/nonpublic/: notes.txt  roper-0xdeba5e12.tgz  roper-pseudo-sue-defcon-sub.txt
doc/slides/: .#beamercolorthemeampangcolor.sty  beamercolorthemeampangcolor.sty  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.vrb  main.xdv  simplified.dia
doc/tex/: ARMParser.tex  comment.cut  roper_gecco.fls  roper_gecco.tex  roper_gecco_sigconf.aux  roper_gecco_sigconf.bbl  roper_gecco_sigconf.blg  roper_gecco_sigconf.fdb_latexmk  roper_gecco_sigconf.fls  roper_gecco_sigconf.out  roper_gecco_sigconf.tex  summary.aux  summary.tex
haskell/: .#Gadgets.lhs  ARM32.lhs  Aux.lhs  Gadgets.lhs
legacy/: TODO
legacy/app/: Main.hs
legacy/src/: ARMCommon.hs  Aux.hs  Gadget.hs
lisp/: .#phylo.lisp  .#roper.lisp  arm-analysis.lisp  asmtools.fasl  asmtools.lisp  aux.lisp  math.lisp  package.lisp  phylo.lisp  roper.asd  roper.fasl  roper.lisp  unicorn.lisp
lisp/2ndvariety/: 2ndvariety.asd  2ndvariety.lisp  packages.lisp
lisp/arm-analysis/: arm-analysis.asd  arm-analysis.lisp  package.lisp
lisp/cl-unicorn/: .#unicorn.lisp  cl-unicorn.asd  package.lisp  unicorn.asd  unicorn.lisp
lisp/hatchery/: hatchery.asd  hatchery.lisp  packages.lisp
lisp/junk-drawer/: .gitignore  dword  glue.lisp  junk-drawer.asd  package.lisp  pointers.lisp  stringification.lisp  utils.lisp
lisp/mips-analysis/: mips-analysis.asd  mips-analysis.lisp  package.lisp
lisp/phylostructs/: packages.lisp  params.lisp  phylostructs.lisp
lisp/read-binary/: packages.lisp  read-binary.asd  read-elf.lisp
lisp/roper/: .#evolution.lisp  .#hatchery.lisp  .gitignore  2ndvariety.lisp  arm-analysis.lisp  breeding.lisp  evolution.lisp  frontend.lisp  hatchery.lisp  mips-analysis.lisp  notes.org  packages.lisp  params.lisp  pattern-task.lisp  phylostructs.lisp  read-elf.lisp  roper.asd  roper.lisp  ropush-gad.lisp  (+6 more)
logs/: iris.out
old/: TODO  old.tgz  roper.cabal  roper.cabal.bak  roper.env  stack.yaml
practicebins/: .#add.s  .gdb_history  hatchsock.c  hello  hello2  hello3  hello4  level0  rot
roper-redux/: Cargo.toml  notes_for_redux.org  notes_for_redux.tex
roper-redux/auto/: notes_for_redux.el
roper-redux/scripts/: ropper_harvest.py
roper-redux/src/: .gdb_history  lib.rs  lit-glossary.tex  lit-header.tex  lit.xmpdata  main.rs
roper-redux/src/dbg/: dbg.rs  mod.rs
roper-redux/src/emu/: .gdb_history  hatchery.rs  loader.rs  mod.rs
roper-redux/src/evo/: breeders.rs  crossover.org  crossover.rs  crossover.tex  evolver.rs  mod.rs  tournament.rs
roper-redux/src/fit/: circbuf.rs  evaluator.rs  mod.rs
roper-redux/src/log/: disas.rs  logger.rs  mod.rs
roper-redux/src/par/: README  mod.rs  statics.rs
rust/: Cargo.toml  Makefile  env.rc  launch.sh  notes.txt  snek-launch.sh
rust/18/04/07/roper/: roper_champion_20-56-15_0_visited.txt  roper_champion_20-56-26_0_visited.txt
rust/18/04/09/roper/: roper_champion_14-41-31_0_visited.txt  roper_champion_14-41-31_8_visited.txt  roper_champion_14-42-44_0_visited.txt  roper_champion_14-42-44_168_visited.txt  roper_champion_14-42-44_64_visited.txt  roper_champion_15-57-29_0_visited.txt  roper_champion_15-57-29_432_visited.txt
rust/src/: lib.rs  main.rs
rust/src/roper/: arm.rs  csv_reader.rs  evolution.rs  evolve.rs  hatchery.rs  interactive.rs  mod.rs  ontostructs.rs  phylostructs.rs  population.rs  read_config.rs  statistics.rs  thumb.rs  util.rs
scripts/: .#visitplot.lisp  .ppm  3d_visit_scraper.awk  best_abfit  class_scraper.awk  edi_stray_template.gnuplot  fitness_deltas.awk  iris.gnuplot  iris_compare.sh  iris_template.gnuplot  latest_season.sh  legacy_class_scraper.awk  plotter.sh  scrape-stray-abfit.sh  timelapse.sh  visit_scraper  visitplot.lisp
src/: Embryogen.hs  Gadget.hs  HatchSock.hs  Hatchery.hs  Main.hs  Phylogen.hs  Thumb16.hs  lib.rs  main.rs  main.rs.bak  old-gadgets.hs
src/haskell/elf-0.27/: LICENSE  Setup.hs  elf.cabal
src/haskell/elf-0.27/src/Data/: Elf.hs
src/haskell/elf-0.27/tests/: Test.hs
tmp/: inst
tools/: armreg-profile
vagrant/: Vagrantfile  bootstrap.sh  translate.patch
(+158 files in other folders)
