[package]
name = "roper"
version = "0.1.0"
authors = ["oblivia simplex <oblivia@paranoici.org>"]


[dependencies]
unicorn = "0.3.0"
capstone = "0.0.4"
elf      = "0.0.10"
byteorder = "0.5.3"
pcre = "0.2.3"
bitflags = "0.7.0"
rand = "0.3.0"
lazysort = "0.1.1"
ketos = "0.5.0"
getopts = "0.2.14" 
csv = "0.15.0"
time = "0.1.36"
scoped-pool = "1.0.0"
