name:                roper
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/roper#readme
license:             BSD3
license-file:        LICENSE
author:              Oblivia Simplex
maintainer:          oblivia@paranoici.org
copyright:           2016 Oblivia Simplex
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ARM32
                     , ARMParser
                     , Aux
                     , Embryogen
                     , Gadget
                     , HatchSock
                     , Hatchery
                     , Phylogen
                     , Thumb16
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable roper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , roper
                     , unicorn
  default-language:    Haskell2010

test-suite roper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oblivia-simplex/roper
