name:                roper
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/roper#readme
license:             BSD3
license-file:        LICENSE
author:              Oblivia Simplex
maintainer:          oblivia@paranoici.org
copyright:           2016 Oblivia Simplex
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
--                     , libs/unicorn/bindings/haskell/src
--                     , libs/unicorn/bindings/haskell/src
--                     , libs/unicorn/bindings/haskell/src/Unicorn
--                     , libs/unicorn/bindings/haskell/src/Unicorn/CPU
--                     , libs/unicorn/bindings/haskell/src/Unicorn/Internal
--                     , libs/unicorn/bindings/haskell/src/cbits
--                     , libs/unicorn/bindings/haskell/src/include
  exposed-modules:     Lib
                     , ARM32
                     , ARMParser
                     , ARMCommon
                     , Aux
                     , Embryogen
                     , Gadget
                     , Hatchery
                     , Phylogen
                     , Thumb16
                     , UnicornUtils
                     , ElfHelper
                     
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , either
                     , unicorn
                     , bytestring
                     , elf
                     , attoparsec
                     , attoparsec-binary
                     , split
                     , network
                     , MonadRandom
                     , random
  default-language:    Haskell2010

executable roper
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , roper
                     , unicorn
                     , bytestring
                     , elf
                     , MonadRandom
                     , attoparsec
                     , attoparsec-binary
                     , random
                     , network
                     , split
  other-modules:       ARM32
                     , ARMCommon
                     , ARMParser
                     , Aux
                     , ElfHelper
                     , Embryogen
                     , Gadget
                     , Hatchery
                     , Phylogen
                     , Thumb16
                     , UnicornUtils
  default-language:    Haskell2010

test-suite roper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , roper
                     , unicorn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oblivia-simplex/roper
