[package]
name = "roper2"
version = "0.2.0"
authors = ["oblivia simplex <oblivia@paranoici.org>"]


[lib]
name = "libroper"
path = "src/lib.rs"

[[bin]]
name = "roper"
path = "src/bin/roper.rs"

[dependencies]
unicorn = "0.8.0"
libunicorn-sys = "0.8.0"
ketos = "0.10.0"
ketos_derive = "0.10.0"
goblin = "0.0.14"
capstone-sys = "0.7.0"
capstone = "0.3.1"
getopts = "0.2.17"
rand = "0.3.0"
lazy_static = "0.2.8"
