[package]
name = "roper2"
version = "0.2.0"
authors = ["oblivia simplex <oblivia@paranoici.org>"]


[lib]
name = "libroper"
path = "src/lib.rs"

[[bin]]
name = "roper"
path = "src/bin/roper.rs"

[dependencies]
unicorn = { git = "https://github.com/oblivia-simplex/unicorn-rs", branch = "context-save-and-restore" }
#unicorn = "0.8.0"
#libunicorn-sys = "0.8.0"
ketos = "0.10.0"
ketos_derive = "0.10.0"
goblin = "0.0.14"
#capstone = "0.0.4"
capstone-sys = "0.7.0"
capstone = "0.3.1"
getopts = "0.2.17"
rand = "0.3.0"
lazy_static = "0.2.8"
# bap = "0.1.0"
# bap-sys = "0.1.0"
rayon = "1.0.1"
hexdump = "0.1.0"
evmap = "4.0.0"
chan-signal = "0.3.1"
num = "0.1.42"
