[package]
name = "roper"
version = "0.1.0"
authors = ["oblivia simplex <oblivia@paranoici.org>"]
# build = "build.rs"


[dependencies]
#unicorn =  { git = "https://github.com/oblivia-simplex/unicorn-rs"}
#libunicorn-sys =  { git = "https://github.com/oblivia-simplex/unicorn-rs"}

unicorn = "0.8.0"
libunicorn-sys = "0.8.0"
capstone = "0.0.4"
elf      = "0.0.10"
byteorder = "0.5.3"
bitflags = "0.7.0"
rand = "0.3.0"
getopts = "0.2.14" 
time = "0.1.36"
scoped_threadpool = "0.1.7"
regex = "0.2"

rustc-serialize = "0.3.22"
chrono = "0.3.0"
bit-vec = "0.4.3"

ctrlc = "3.0.3"
backtrace = "0.3.4"
bio = "0.17.0"
indextree = "1.1.1"
